--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "serve-static": "^1.14.1",
     "v-tooltip": "^2.0.3",
     "vue": "^2.6.12",
+    "vue-apexcharts": "^1.6.0",
     "vue-axios": "^3.0.1",
     "vue-bootstrap4-table": "^1.1.11",
     "vue-google-login": "^2.0.5",
