--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "bootstrap-vue": "^2.17.3",
     "core-js": "^3.6.5",
     "express": "^4.17.1",
+    "mdbvue": "^6.7.1",
     "serve-static": "^1.14.1",
     "v-tooltip": "^2.0.3",
     "vue": "^2.6.12",
