--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "vuetify": "^2.3.12"
   },
   "devDependencies": {
+    "@mdi/font": "^5.8.55",
     "@vue/cli-plugin-babel": "~4.5.0",
     "@vue/cli-plugin-router": "~4.5.0",
     "@vue/cli-service": "~4.5.0",
