--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "bootstrap-vue": "^2.17.3",
     "core-js": "^3.6.5",
     "express": "^4.17.1",
+    "font-awesome": "^4.7.0",
     "mdbvue": "^6.7.1",
     "serve-static": "^1.14.1",
     "v-tooltip": "^2.0.3",
@@ -22,6 +23,7 @@
     "vue-apexcharts": "^1.6.0",
     "vue-axios": "^3.2.0",
     "vue-bootstrap4-table": "^1.1.11",
+    "vue-fontawesome-icon": "^1.3.0",
     "vue-google-login": "^2.0.5",
     "vue-google-oauth2": "^1.5.5",
     "vue-router": "^3.2.0",
