--- a/package.json
+++ b/package.json
@@ -14,9 +14,10 @@
     "bootstrap": "^4.5.2",
     "bootstrap-vue": "^2.17.3",
     "core-js": "^3.6.5",
+    "crypto-js": "^4.1.1",
     "express": "^4.17.1",
     "font-awesome": "^4.7.0",
-    "mdbvue": "^6.7.1",
+    "mdbvue": "^6.7.3",
     "serve-static": "^1.14.1",
     "v-tooltip": "^2.0.3",
     "vue": "^2.6.12",
